--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "author": "Fahima Mokhtari",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.7",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "querystring": "^0.2.1"
   },
   "devDependencies": {
     "eslint": "^8.56.0"
